# serialization-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  fuzz-nightly.yml
fuzz/: fuzz_common.h  fuzz_cursor_ops.cpp  fuzz_deserializer.cpp  fuzz_deserializer_hexctor.cpp  fuzz_hex.cpp  fuzz_json.cpp  fuzz_mixed_roundtrip.cpp  fuzz_pack_unpack.cpp  fuzz_pod.cpp  fuzz_roundtrip.cpp  fuzz_string_helper.cpp  fuzz_svec.cpp  fuzz_varint.cpp
include/: deserializer_t.h  json_helper.h  secure_erase.h  serializable.h  serializable_pod.h  serializable_vector.h  serialization.h  serialization_helper.h  serialization_secure_erase.h  serializer_t.h  string_helper.h
src/: deserializer_t.cpp  secure_erase.cpp  serialization_secure_erase.cpp  serializer_t.cpp  string_helper.cpp
test/: test.cpp  test_helpers.h  unit_deserializer.inl  unit_deserializer_extended.inl  unit_json_helper.inl  unit_mixed_streams.inl  unit_pack_unpack.inl  unit_secure_erase.inl  unit_serializable_pod.inl  unit_serializable_pod_extended.inl  unit_serializable_vector.inl  unit_serializable_vector_extended.inl  unit_serializer.inl  unit_string_helper.inl  unit_varint.inl
